--- a/index.html
+++ b/index.html
@@ -82,6 +82,35 @@
        <button>Learn More</button>
     </section>
     <!-- /Our About us Setion End -->
+    
+    <!-- My Service Section Start -->
+    <section class="service">
+       <div class="upper">
+        <div class="image">
+            <img src="./assets/img/banner .jpg">
+        </div>
+        <div class="content" style="padding-left: 60px;">
+            <h3>Lorem ipsum dolor</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptas dolorem atque illo aliquid facere in consectetur excepturi iusto ipsum quam eaque quod sint fuga explicabo fugit exercitationem, beatae, modi reiciendis neque voluptates ducimus asperiores. Repellat, excepturi. Repellat suscipit voluptas natus, distinctio dolor laudantium ab, at minus velit maiores possimus.</p>
+        </div>
+       </div>
+       <div class="lower">
+        <div class="content"style="padding-right: 60px;">
+              <h3>Lorem ipsum dolor</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptas dolorem atque illo aliquid facere in consectetur excepturi iusto ipsum quam eaque quod sint fuga explicabo fugit exercitationem, beatae, modi reiciendis neque voluptates ducimus asperiores. Repellat, excepturi. Repellat suscipit voluptas natus, distinctio dolor laudantium ab, at minus velit maiores possimus.</p>
+        </div>
+        <div class="image">
+            <img src="./assets/img/banner .jpg">
+        </div>
+       </div>
+    </section>
+    <!-- /My Service Section End -->
+
+    <!-- Footer Section Start -->
+    <footer>
+    <h4><span>Copyright@domainname.com.All Rights Reserved!Designed by:</span>Ajeet vishwakarma</h4>
+    </footer>
+    <!-- /Footer Section End -->
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
 </body>
