webpage-3 Update Respodive

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <!--Top Head Section Start -->
 <header>
-    <h2>INDUSTRIAL<span style="font-size: 15px;">Intgreted Solution.Proven Results</span></h2>
-   <h2><i class="fa-solid fa-phone"></i> QUESTONS?CALL<span style="color: #28CDF0;">1-800-256-9802</span></h2>
+    <h2>INDUSTRIAL<span style="font-size: 15px;"><span2>Intgreted Solution.Proven Results</span2></span></h2>
+   <h2><i class="fa-solid fa-phone"></i><span2> QUESTONS?CALL</span2><span style="color: #28CDF0;">1-800-256-9802</span></h2>
 </header>
     <!--/Top Head Section End -->
 
@@ -42,7 +42,7 @@
                     </tr>
                     <tr>
                         <td colspan="2"><textarea name="massage" style="height: 150px;
-                        width: 480px;"placeholder="MASSAGE"></textarea></td>
+                        "placeholder="MASSAGE"></textarea></td>
                     </tr>
                     <tr>
                         <td colspan="2"><button type="submit">SUBMIT</button></td>
@@ -59,18 +59,18 @@
     <section class="feature">
         <div>
            <h2>Innovation</h2>
-           <img src="./assets/img/images 1.jpg"alt=""height=""width="">
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque earum omnis alias magnam assumenda eos quisquam laboriosam sed, perferendis consectetur corporis, ad facilis consequatur tium. Molestias tempora ipsa pariatur officiis qui accusantium, recusandae mollitia temporibus vero placeat quae aliquid.</p>
+           <img src="./assets/img/images 1.jpg"alt="">
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque  consequatur tium. Molestias tempora ipsa pariatur officiis qui accusantium, recusandae mollitia temporibus vero placeat quae aliquid.</p>
         </div>
         <div>
            <h2>People & Culture</h2>
-           <img src="./assets/img/images 1.jpg"alt=""height=""width="">
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque earum omnis alet inventore ipsa tempora exercitationem, quos fugit repellat cum accusantium sed omnis deleniti nih, eaque doloremque sequi blanditiis sint laudantium. Molestias tempora ipsa pariatur officiis qui accusantium, recusandae mollitia temporibus.</p>
+           <img src="./assets/img/images 1.jpg"alt="">
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque deleniti nih, eaque doloremque sequi blanditiis sint laudantium. Molestias tempora ipsa pariatur officiis qui accusantium, </p>
         </div>
         <div>
            <h2>Solutions at a Glance</h2>
-           <img src="./assets/img/images 1.jpg"alt=""height=""width="">
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque earum omnis alias magnam assumenda eos quisquam laboriosam sed, perferendis consectetur corporis, ad facilis consequatur sunt! Consequatutore ipsa tempora exercitationem, quos fugit repellat cum accusantium sed omnis delipsa pariatur  vero placeat quae aliquid.</p>
+           <img src="./assets/img/images 1.jpg"alt="">
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id dignissimos eaque  consequatur sunt! Consequatutore ipsa tempora exercitationem, quos fugit repellat cum accusantium sed omnis delipsa pariatur .</p>
         </div>
     </section>
     <!-- /Our Feature Section End -->
@@ -89,13 +89,13 @@
         <div class="image">
             <img src="./assets/img/banner .jpg">
         </div>
-        <div class="content" style="padding-left: 60px;">
+        <div class="content">
             <h3>Lorem ipsum dolor</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptas dolorem atque illo aliquid facere in consectetur excepturi iusto ipsum quam eaque quod sint fuga explicabo fugit exercitationem, beatae, modi reiciendis neque voluptates ducimus asperiores. Repellat, excepturi. Repellat suscipit voluptas natus, distinctio dolor laudantium ab, at minus velit maiores possimus.</p>
         </div>
        </div>
        <div class="lower">
-        <div class="content"style="padding-right: 60px;">
+        <div class="content">
               <h3>Lorem ipsum dolor</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptas dolorem atque illo aliquid facere in consectetur excepturi iusto ipsum quam eaque quod sint fuga explicabo fugit exercitationem, beatae, modi reiciendis neque voluptates ducimus asperiores. Repellat, excepturi. Repellat suscipit voluptas natus, distinctio dolor laudantium ab, at minus velit maiores possimus.</p>
         </div>
